--- a/src/app/spotbie/features/user-features/user-features.component.html
+++ b/src/app/spotbie/features/user-features/user-features.component.html
@@ -11,9 +11,7 @@
 
 <h4 class="text-uppercase">SPOTBIE COMMUNITY</h4>
 
-<p>
-
-    <img class='sb-whiteIconBg' src='assets/images/qr/spotbie-white-icon.png' />
+<p>    
 
     Welcome to the SpotBie community. Find places to eat, events, and shopping around you. By signing up,
     users are able to gain loyalty points from our spotbie community members. These rewards include discounts, free drinks/food, exclusive event merchandise, and more.
@@ -70,7 +68,7 @@
 
 <p class="mt-2 mb-2">
 
-    <img class='sb-whiteIconBg' src='assets/images/qr/spotbie-white-icon.png' />
+    <img class='sb-whiteIconBg' src='assets/images/qr/spotbie-white-icon.png' *ngIf="!isMobile" />
 
     Are you looking for <b>events around you</b>? 
     Let SpotBie help you find the best events around you. 
