--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
@@ -4,6 +4,8 @@
 
     <div class="sb-dashboardWrapper" #qrCodeAppAnchor>
         
+        <img src="assets/images/spotbie-qr.svg" class="sb-qrImage" />
+
         <div class="spotbie-button" (click)="startQrScanner()">
             <i class="fas fa-qrcode" style="margin-right: 5px;"></i>
             <span class="spotbie-text-gradient">SCAN NOW</span>
