--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -192,4 +192,8 @@
         LOOKING FOR THE BUSINESS PORTAL?
     </div>
 
+    <div class='sb-closeButton' (click)="closeWindowX()">
+        <i class="fa fa-times"></i>
+    </div>
+
 </div>
