--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -42,9 +42,6 @@
     border-top: 1px solid #332f3e;
     text-align: center;    
 }
-.sb-icon{
-    font-size: 1.8rem;
-}
 .spotbie-share-button{
     margin-left: 10px;
     margin-right: 10px;
@@ -353,7 +350,17 @@ h6.sb-titleGreen{
     }
 }
 @media (max-width: 840px) {
-
+    .spotbie-info-object-image-thumb{
+        margin-left: unset;
+        margin-right: unset;
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+        height: 60vw;
+        min-height: 60vw;
+        background-size: cover!important;
+        background-position: center!important;
+    }
 }
 @media (max-width: 768px) { 
 
