--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -648,7 +648,7 @@
         
         <table class="spotbie-settings-table" id="spotbie-deactivate-table" *ngIf="settingsFormInitiated">
             <tr>
-                <td class='spotbie-text-gradient text-uppercase mb-5' style="margin-top: 0px; cursor: pointer;" (click)="startDeactivateAccount()">
+                <td class='spotbie-text-gradient text-uppercase deactivate-account' style="margin-top: 0px; cursor: pointer;" (click)="startDeactivateAccount()">
                     Deactivate Account
                 </td>
             </tr>
