--- a/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
+++ b/src/app/spotbie/spotbie-logged-in/user-dashboard/user-dashboard.component.html
@@ -4,7 +4,7 @@
 
     <div class="sb-dashboardWrapper" #qrCodeAppAnchor>
         
-        <img src="assets/images/spotbie-qr.svg" class="sb-qrImage" />
+        <img src="assets/images/spotbie-qr.svg" class="sb-qrImage" (click)="startQrScanner()" />
 
         <div class="spotbie-button" (click)="startQrScanner()">
             <i class="fas fa-qrcode" style="margin-right: 5px;"></i>
