--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -2,13 +2,18 @@
     padding-bottom: 0px;
     padding-top: 70px;
     background-color: #332f3e;
+    padding-bottom: 100px;
+    z-index: 99;    
+}
+.spotbie-bgIconLogo{
+    min-height: 100vh;
+    height: 100vh;
+    max-height: 100vh;
+    background: url(src/assets/images/qr/spotbie-white-icon.png);
     background-position: center !important;
     background-repeat: no-repeat !important;
     background-size: cover !important;
     overflow:  hidden !important;
-    padding-bottom: 100px;
-    z-index: 99;    
-    background: url(src/assets/images/qr/spotbie-white-icon.png);
 }
 .spotbie-repost-title{
     position: relative;
@@ -377,9 +382,16 @@ h6.sb-titleGreen{
         max-width: 90%;
         letter-spacing: 1px;
     }
+    .spotbie-info-object-title h1{
+        font-size: 1.5rem;
+    }
+    .spotbie-info-object-open{
+        font-weight: normal;
+    }
     .spotbie-overlay-window{
         padding-top: env(safe-area-inset-top, 20px);
         padding-bottom: 50px !important;
+        margin-bottom: 20px !important;
         background-attachment: scroll !important;  
     }
     .spotbie-share-post-link{
@@ -394,10 +406,12 @@ h6.sb-titleGreen{
         width: 92%;
         min-width: 92%;
         max-width: 92%;        
-    }     
+    }         
 }
 @media (max-width: 460px) { 
-   
+    .spotbie-info-object-open{
+       font-size: 15px !important;
+    }
 }
 @media (max-width: 420px) { 
   
